--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "~bootstrap/dist/css/bootstrap.min.css";
+
 body {
   margin: 0;
   padding: 0;
@@ -8,7 +10,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.c-header {
+  background-color: #aeb5b1;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  color: white;
 }
