--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 
+html,
+body,
+#root {
+  display: block;
+  height: 100%;
+  width: 100%;
+  max-height: 100vh;
+  font-family: "Cerebri Sans", Avenir, Helvetica, Segoe UI, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 .c-header {
@@ -29,4 +36,20 @@ body {
 }
 .c-header a {
   color: white;
+}
+
+/* CSS page transitions */
+.fade-enter {
+  opacity: 0.01;
+}
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 0.3s ease-in;
+}
+.fade-exit {
+  opacity: 0;
+}
+.fade-exit.fade-exit-active {
+  opacity: 0.01;
+  transition: opacity 0.3s ease-in;
 }
